// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Onboarding should render different components 1`] = `
<div
  className="wizard welcome"
>
  <div
    className="wizard-main"
  >
    <div
      className="logo-wrapper"
    >
      <div
        className="cozy-logo-white"
      />
    </div>
    <h1
      className="title"
    />
    <h1
      className="title"
    />
  </div>
  <footer
    className="wizard-footer"
  >
    <button
      className="coz-btn coz-btn--regular"
      onClick={[Function]}
      role="button"
    />
    <a
      className="link"
      href="https://cozy.io/fr/try-it?from=io.cozy.drive.mobile&os=browser"
    />
  </footer>
</div>
`;

exports[`Onboarding should render different components 2`] = `
<div
  className="wizard select-server"
>
  <header
    className="wizard-header"
  >
    <a
      className="close-button"
      onClick={undefined}
    />
  </header>
  <div
    className="wizard-main"
  >
    <div
      className="logo-wrapper"
    >
      <div
        className="cozy-logo-white"
      />
    </div>
    <input
      className="input"
      onChange={undefined}
      placeholder={undefined}
      type="url"
      value={undefined}
    />
    <p
      className="description"
    />
  </div>
  <footer
    className="wizard-footer"
  >
    <button
      className="coz-btn coz-btn--regular"
      disabled={true}
      onClick={[Function]}
      role="button"
    />
  </footer>
</div>
`;

exports[`Onboarding should render the SelectServer screen 1`] = `
<div
  className="wizard select-server"
>
  <header
    className="wizard-header"
  >
    <a
      className="close-button"
      onClick={undefined}
    />
  </header>
  <div
    className="wizard-main"
  >
    <div
      className="logo-wrapper"
    >
      <div
        className="cozy-logo-white"
      />
    </div>
    <input
      className="input"
      onChange={undefined}
      placeholder={undefined}
      type="url"
      value={undefined}
    />
    <p
      className="description"
    />
  </div>
  <footer
    className="wizard-footer"
  >
    <button
      className="coz-btn coz-btn--regular"
      disabled={true}
      onClick={[Function]}
      role="button"
    />
  </footer>
</div>
`;

exports[`Onboarding should render the welcome screen 1`] = `
<div
  className="wizard welcome"
>
  <div
    className="wizard-main"
  >
    <div
      className="logo-wrapper"
    >
      <div
        className="cozy-logo-white"
      />
    </div>
    <h1
      className="title"
    />
    <h1
      className="title"
    />
  </div>
  <footer
    className="wizard-footer"
  >
    <button
      className="coz-btn coz-btn--regular"
      onClick={undefined}
      role="button"
    />
    <a
      className="link"
      href="https://cozy.io/fr/try-it?from=io.cozy.drive.mobile&os=browser"
    />
  </footer>
</div>
`;
